@@ -129,8 +129,7 @@ public class CoherenceWizardIterator implements WizardDescriptor.InstantiatingIt
             if (c instanceof JComponent) {
                 JComponent jc = (JComponent) c;
                 // Step #.
-                jc.putClientProperty(
-                    WizardDescriptor.PROP_CONTENT_SELECTED_INDEX, new Integer(i)); // NOI18N
+                jc.putClientProperty(WizardDescriptor.PROP_CONTENT_SELECTED_INDEX, Integer.valueOf(i)); // NOI18N
 
                 // Step name (actually the whole list for reference).
                 jc.putClientProperty(WizardDescriptor.PROP_CONTENT_DATA, steps); // NOI18N
